# add stuff to use MFC in this executable
SET(CMAKE_MFC_FLAG 6)

CMAKE_MINIMUM_REQUIRED(VERSION 1.6)

add_subdirectory (SceneTransformSpotlight)
add_subdirectory (ScreenRaycast)
add_subdirectory (ShadowMap)
add_subdirectory (Serialization)
add_subdirectory (GetTheFlag)
add_subdirectory (Terrain)
add_subdirectory (FPS)



 